--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -97,6 +97,10 @@ img {
         align-items: center;
         overflow: hidden
     }
+    .animationImgContainer{
+        height: 7rem !important;
+
+    }
     .aboutImg{
         width: 30rem;
     }
