--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 }
 .bloco{
   display: flex;
-  text-align: justify;
+  text-align:start;
   justify-content: center;
   min-height: 16rem;
 
@@ -74,6 +74,7 @@ h3 {
   font-size: 1.5em;
   line-height: 1.1;
   margin: 0;
+  word-spacing: 1px;
 }
 button {
   border-radius: 8px;
